# pi-agent-fastapi

./: .env.example  .gitignore  README.md  pyproject.toml  run.sh
app/: config.py  main.py
app/api/: _upload.py  audio_tools.py  document.py  edge_tts.py  embeddings.py  extract_web.py  ffmpeg.py  gemini_image.py  image_tools.py  knowledge_graph.py  langextract.py  markitdown.py  media.py  nlp.py  ocr.py  pdf_tools.py  playwright.py  presidio.py  router.py  video_tools.py  whisper.py  whisperx.py  ytdlp.py
app/api/integrations/: coze.py  feishu.py  n8n.py  wecom.py
app/core/: auth.py  openapi.py  supabase.py
app/schemas/: common.py
app/services/: _lazy.py  audio_process_service.py  document_service.py  edge_tts_service.py  embeddings_service.py  extract_web_service.py  ffmpeg_service.py  gemini_image_service.py  knowledge_graph.py  langextract_service.py  markitdown_service.py  media_generation.py  nlp_service.py  ocr_service.py  pdf_service.py  playwright_sandbox.py  playwright_service.py  presidio_service.py  rembg_service.py  video_process_service.py  whisper_service.py  whisperx_service.py  ytdlp_service.py
app/services/integrations/: coze.py  feishu.py  n8n.py  wecom.py
scripts/: install-ml.sh
tests/: conftest.py  test_api_functional.py  test_api_health.py  test_api_status.py  test_auth.py  test_markitdown_url.py  test_ml_status.py  test_openapi.py  test_playwright_sandbox.py  test_top5_status.py  test_ytdlp_status.py
