[project]
name = "pi-agent-fastapi"
version = "0.1.0"
description = "Pi Agent Python 服务：文档转换、语音识别、知识图谱与第三方集成"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic-settings>=2.6.0",
  "python-multipart>=0.0.12",
  "supabase>=2.10.0",
  "httpx>=0.28.0",
  "markitdown[all]>=0.1.0",
  "faster-whisper>=1.1.0",
  "edge-tts>=7.0.0",
  "langextract[openai]>=1.0.0",
  "playwright>=1.49.0",
  "yt-dlp>=2025.1.0",
  "networkx>=3.4.0",
]

[project.optional-dependencies]
ml = [
  "numpy>=1.24.0",
  "paddlepaddle>=3.0.0",
  "paddleocr>=2.9.0",
  "rembg>=2.0.50",
  "pymupdf>=1.25.0",
  "pdfplumber>=0.11.0",
  "camelot-py[cv]>=0.11.0",
  "opencv-python-headless>=4.8.0",
  "moviepy>=2.0.0",
  "scenedetect[opencv]>=0.6.0",
  "librosa>=0.10.0",
  "pydub>=0.25.0",
  "demucs>=4.0.0",
  "torch>=2.0.0",
  "torchaudio>=2.0.0",
  "jieba>=0.42.0",
  "Pillow>=10.0.0",
]
# pkuseg 不支持 Python 3.12+（缺少 longintrepr.h），仅保留 jieba。
# 若必须用 pkuseg，请使用 Python 3.10/3.11 环境。
top5 = [
  "numpy>=1.24.0",
  "trafilatura>=2.0.0",
  "unstructured[all]>=0.16.0",
  "sentence-transformers>=3.0.0",
  "whisperx>=3.1.0",
  "presidio-analyzer>=2.2.0",
  "presidio-anonymizer>=2.2.0",
  "spacy>=3.7.0",
]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
